k8s/app.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ip-pass
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ip-pass
  namespace: ip-pass
  labels:
    app.kubernetes.io/name: ip-pass
spec:
  revisionHistoryLimit: 3
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: ip-pass
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ip-pass
    spec:
      automountServiceAccountToken: true
      serviceAccountName: ip-pass
      enableServiceLinks: false
      securityContext:
        fsGroup: 1000
      containers:
        - name: ip-pass
          image: ghcr.io/mac-chaffee/ip-pass:v1.1.0
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          # readinessProbe:
          #   httpGet:
          #     path: /health
          #     port: http
          #   initialDelaySeconds: 1
          #   failureThreshold: 3
          #   timeoutSeconds: 1
          #   periodSeconds: 10
          resources:
            requests:
              cpu: 10m
              memory: 10Mi
            limits:
              memory: 300Mi
              ephemeral-storage: 55Mi
          securityContext:
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 1000
            runAsGroup: 1000
            seccompProfile:
              type: RuntimeDefault
---
apiVersion: v1
kind: Service
metadata:
  name: ip-pass
  namespace: ip-pass
  labels:
    app.kubernetes.io/name: ip-pass
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: ip-pass
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ip-pass
  namespace: ip-pass
  labels:
    app.kubernetes.io/name: ip-pass
spec:
  rules:
    - host: access.macchaffee.com
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: ip-pass
                port:
                  number: 8080
